--- a/chat/templates/chat/chat_window.html
+++ b/chat/templates/chat/chat_window.html
@@ -5,7 +5,7 @@
 
 <style>{% include 'css/chat.css' %}</style>
 <audio id="remote-audio" autoplay></audio>
-<script src="{% static 'javascript/adapter-latest.js' %}"></script>
+<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <div class="chat-window">
     <div class="chat-top">
         {% if not friendship %}
