--- a/chat/templates/chat/room_loop.html
+++ b/chat/templates/chat/room_loop.html
@@ -2,11 +2,11 @@
 
 <div class="activity-horizontal-list">
     {% for room, target in rooms %}
-        <div class="item" style="max-width:125px;">
+        <div class="item">
             {% load thumbnail %}
             <a href="{{ room.get_absolute_url }}">
             {% if target.image %}
-            <img src="{% thumbnail target.image 200x200 %}" class="photo" style="max-width: 125px">
+            <img src="{% thumbnail target.image 200x200 %}" class="photo">
             {% else %}
             <img src="{% static default_img %}" width="100">
             {% endif %}
