--- a/account/templates/account/sidemenu.html
+++ b/account/templates/account/sidemenu.html
@@ -8,7 +8,7 @@
     <a href="{% url 'account:home' %}" {% active_if request 'home' %}><img src="{% static 'icons/home.png' %}">{% blocktrans %}Homepage{% endblocktrans %}</a>
     <a href="{% url 'activity:list' %}" {% active_if request 'activities' %}><img src="{% static 'icons/activity.png' %}">{% blocktrans %}Aktivitäten{% endblocktrans %}</a>
     <a href="{% url 'activity:category_list' %}" {% active_if request 'categories' %}><img src="{% static 'icons/category.png' %}">{% blocktrans %}Kategorien{% endblocktrans %}</a>
-    <a href="{% url 'competitions:user_overview' %}" {% active_if request 'competitions' %}><img src="{% static 'icons/tournament.png' %}">{% blocktrans %}Matches & Turniere{% endblocktrans %}</a>
+    <!--<a href="{% url 'competitions:user_overview' %}" {% active_if request 'competitions' %}><img src="{% static 'icons/tournament.png' %}">{% blocktrans %}Matches & Turniere{% endblocktrans %}</a>-->
     <a href="{% url 'usergroups:group_list' %}" {% active_if request 'groups' %}><img src="{% static 'icons/group.png' %}">{% blocktrans %}Gruppen{% endblocktrans %}</a>
     <a href="{% url 'chat:chat_list' %}" {% active_if request 'chat' %}><img src="{% static 'icons/chat.png' %}">{% trans "Chats" %}</a>
     <a href="{% url 'vacancies:application_list' %}" {% active_if request 'vacancies' %}><img src="{% static 'icons/interview.png' %}">{% trans "Bewerbungen & Einladungen" %} {% invitation_number_string user %}</a>
