--- a/multiplayer/templates/css/match.css
+++ b/multiplayer/templates/css/match.css
@@ -3,7 +3,7 @@
     top: 70%;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 5px;
     overflow-y: scroll;
     scrollbar-width: none;
 }
