--- a/chat/templates/css/chat.css
+++ b/chat/templates/css/chat.css
@@ -88,6 +88,7 @@
     margin: 10px 5% 10px 30%;
     padding: 5px 5px;
     border-radius: 10px;
+    word-wrap: break-word
 }
 .chat-message-left {
     background-color: darkcyan;
@@ -96,6 +97,7 @@
     padding: 5px 5px;
     border-radius: 10px;
     color: black;
+    word-wrap: break-word;
 }
 .message-info {
     font-size: 12px;
