--- a/multiplayer/templates/multiplayer/lobby.css
+++ b/multiplayer/templates/multiplayer/lobby.css
@@ -36,8 +36,11 @@
     height: 30%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     font-weight: bold;
+}
+.match-list .item .top a {
+    color: white;
 }
 .match-list .item .top img {
     max-width: 100%;
@@ -65,6 +68,12 @@
     bottom: 0;
     width: 100%;
     height: 25%;
+}
+.match-list .icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height: 30px;
 }
 
 .bottom .button-like {
