--- a/usergroups/templates/usergroups/group_detail.html
+++ b/usergroups/templates/usergroups/group_detail.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 
 {% block title %}{{ group.name }}{% endblock %}
+{% block style %}{% include 'multiplayer/lobby.css' %}{% endblock %}
 
 {% block content %}
     {% if group.image %}
@@ -43,7 +44,7 @@
     {% endif %}
     {% if is_member and group.invitations.all.exists %}
         <h2>{% trans "Einladungen" %}</h2>
-        {% include 'usergroups/invitation_list.html' %}
+        {% include 'usergroups/invitation_list.html' with invitations=group.invitations %}
     {% endif %}
     {% if user == group.admin %}
         <div class="competitive">
@@ -59,45 +60,7 @@
     {% endif %}
     {% if is_member and group.appointments.all.exists %}
         <h2>{% trans "Termine" %}</h2>
-        <table>
-            <tr>
-                <th>{% trans "Wann" %}</th>
-                <th>{% trans "Wo" %}</th>
-                <th>{% trans "Zusagen" %}</th>
-                <th>{% trans "Absagen" %}</th>
-                <th>{% trans "Aktion" %}</th>
-            </tr>
-            {% for appointment in group.appointments.all %}
-                <tr>
-                    <td>{{ appointment.start_time }}</td>
-                    <td>{{ appointment.location }}</td>
-                    <td>
-                        {{ appointment.participants.all|length }}/{{ group.members.all|length }}:
-                        {% for user in appointment.participants.all %}
-                            <a href="{{ user.get_absolute_url }}">{{ user.username }}</a>
-                        {% endfor %}
-                    </td>
-                    <td>
-                        {{ appointment.cancellations.all|length }}/{{ group.members.all|length }}:
-                        {% for user in appointment.cancellations.all %}
-                            <a href="{{ user.get_absolute_url }}">{{ user.username }}</a>
-                        {% endfor %}
-                    </td>
-                    <td>
-                        {% if user in appointment.participants.all %}
-                            <a href="{% url 'scheduling:cancel_confirmation' appointment.id %}">{% trans "Zusage zurücknehmen" %}</a>
-                            {% elif user in appointment.cancellations.all %}
-                                <a href="{% url 'scheduling:cancel_cancellation' appointment.id %}">{% trans "Absage zurücknehmen" %}</a>
-                            {% else %}
-                                <a href="{% url 'scheduling:confirm_appointment' appointment.id %}">{% trans "Zusagen" %}</a> | <a href="{% url 'scheduling:decline_appointment' appointment.id %}">{% trans "Absagen" %}</a>
-                        {% endif %}
-                        {% if user == group.admin %}
-                            | <a href="{% url 'scheduling:delete_appointment' appointment.id %}">{% trans "Löschen" %}</a>
-                        {% endif %}
-                    </td>
-                </tr>
-            {% endfor %}
-        </table>
+        {% include 'usergroups/appointment_list.html' %}
     {% endif %}
     <br/>
     {% if user == group.admin %}
