--- a/usergroups/templates/usergroups/invitation_list.html
+++ b/usergroups/templates/usergroups/invitation_list.html
@@ -1,21 +1,21 @@
-{% load activity_filter %}
+{% load static %}
 {% load i18n %}
 
-<table>
-    <tr>
-        <th>{% trans "Nutzer" %}</th>
-        <th>{% trans "Nachricht" %}</th>
-        <th>{% trans "Aktion" %}</th>
-    </tr>
-    {% for invitation in group.invitations.all %}
-        <tr>
-            <td><a href="{{ invitation.user.get_absolute_url }}">{{ invitation.target.username }}</a></td>
-            <td>{{ invitation.message }}</td>
-            <td>
-                {% if user == group.admin %}
-                    <a href="{% url 'vacancies:delete_invitation' invitation.id %}">{% trans "Löschen" %}</a>
-                {% endif %}
-            </td>
-        </tr>
+<div class="match-list">
+    {% for invitation in invitations.all %}
+    <div class="item" style="width: 200px; height: 150px; cursor: pointer;" onclick=openLink("{{ invitation.target.get_absolute_url }}")>
+        <div class="top" style="height: 35%; overflow-y: scroll; scrollbar-width: none; word-wrap: break-word; align-items: center-stretch">
+            <span style="padding: 5px 5px; text-align: center">{{ invitation.target }}</span>
+        </div>
+        <div class="middle" style="height: 45%; top: 36%;">
+            {{ invitation.message }}
+        </div>
+        <div class="bottom" style="bottom: 0; height: 20%">
+            <div class="button-like" onclick=openLink("{% url 'vacancies:delete_invitation' invitation.id %}")>
+                <img src="{% static 'icons/remove.png' %}">
+                {% trans 'Löschen' %}
+            </div>
+        </div>
+    </div>
     {% endfor %}
-</table>
+</div>
