--- a/multiplayer/templates/multiplayer/lobby.html
+++ b/multiplayer/templates/multiplayer/lobby.html
@@ -62,7 +62,7 @@
 </div>
 <p style="clear: both"></p>
 <div class="other-matches">
-    <h2>{% trans 'Offen' %}</h2>
+    <h2>{% trans 'Andere' %}</h2>
     <div class="match-list" id="other-matches">
         
     </div>
