--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -43,6 +43,8 @@ input[type='text'], textarea, select:focus {
     box-shadow: 0 0 5px rgba(81, 203, 238, 1);
     padding: 0px 5px;
     margin: 5px 5px;
+    width: 90vw;
+    max-width: 500px;
 }
 
 .post {
